update: on deleting a post, the comments and reacts on this post will be auto deleted
